--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     body{
       background-color: #ebf2ff;
     }</style>
-    <title>Card example bootstrap</title>
+    <title>taskY</title>
   </head>
   <body onload="loadInitialCardData()">
       <!-- Modal -->
